# faang-ml-journey

./: README.md  cols.txt  roadmap.md
Handbook/Example/: # %% [markdown].py  Training_runnung_a_linear_model_using_sklearn.ipynb
ML Labs/Maths/: 00_vector_addition.ipynb  01_Linear_combinations.ipynb  02_Dot_Product.IPYNB  03_Matrix_Multiplication.ipynb
ML Labs/Oops/: car.py  class_objects.ipynb
ML Labs/Supervised/Linear Regression/: 01_Linear_Regression.ipynb  02_Multivariance_Linear_Regression.ipynb  03_Bias_With_Without.ipynb  04_Best_Fit_Line..ipynb  05_Cost_Function.ipynb
Ml_SherLock_Homes/ml-detective-academy/: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
Ml_SherLock_Homes/ml-detective-academy/.github/workflows/: ci.yml
Ml_SherLock_Homes/ml-detective-academy/case-files/case_template/: investigation.md  math.md  problem.md
Ml_SherLock_Homes/ml-detective-academy/datasets/: README.md
Ml_SherLock_Homes/ml-detective-academy/ml_detective_academy/: __init__.py  linear_model.py  optim.py
Ml_SherLock_Homes/ml-detective-academy/scripts/: download_data.py
Ml_SherLock_Homes/ml-detective-academy/tests/: test_basic.py
week-01-linear-algebra/: README.md
week-01-linear-algebra/data/: bowler_stats.csv  highest_scores.csv
week-01-linear-algebra/notebooks/: 01_Linear_combinations.ipynb  02_Dot_Product.IPYNB  02_vector_addition_and_scaling.ipynb  Linear_Regression.ipynb
